...
      builder: (context) {
        //return Provider.value(value: myModel, child: BottomSheetCreate());
        if (type == PostType.NormalPost) {
          return ListView(
            children: [
              Container(
                key: Key('bottomSheetList'),
                margin: EdgeInsets.all(20.0),
                child: Column(
                  mainAxisAlignment: MainAxisAlignment.start,
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    AddressNameTile(postItem: postItem),
                    SizedBox(height: 10.0),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                      children: [
                        Expanded(
                          child: TextButton(
                              key: Key('deliveredTextButton'),
                              onPressed: () async {
                                setState(() {
                                  showSpinner = true;
                                });
                                Navigator.of(context).pop();
                                DatabaseResult result =
...
                  } else if (widget.postType == PostType.Package) {
                    signature = await Navigator.pushNamed(
                        context, SignatureScreen.screenId);
                  }
                  if (signature != null ||
                      widget.postType == PostType.NormalPost) {
                    acceptButton(signature, widget.postType, post);
                  }
                },
                value: false,
              ),
            ),
          ),
...
