...
  late String city;

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text('ADD ADDRESS'),
      ),
      drawer: Drawer(
        child: DrawerChild(),
      ),
      body: ModalProgressHUD(
        inAsyncCall: showSpinner,
...
